--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "isomorphic-unfetch": "^3.0.0",
         "next": "^9.2.2",
         "react": "^16.13.0",
-        "react-dom": "^16.13.0"
+        "react-dom": "^16.13.0",
+        "react-github-corner": "^2.3.0"
     }
 }
